# Bank-Management-System

./: .gitignore  AccountManager.cpp  AccountManager.h  BankAccount.cpp  BankAccount.h  CMakeLists.txt  FileManager.cpp  FileManager.h  README.md  Utils.h  a.out  config.ini  main  main.cpp
.cache/clangd/index/: AccountManager.cpp.0B1D27751E740B21.idx  AccountManager.h.BC042EE31496E1B5.idx  BackgroundWorker.cpp.7B880EB325816262.idx  BackgroundWorker.h.89EDBF3B05FEFFBB.idx  BankAccount.cpp.8834C40DCCAF513E.idx  BankAccount.h.BA3233F152C73195.idx  BankExceptions.h.299E228605CC51C6.idx  Config.h.86E1F5E1F9CB752F.idx  DatabaseManager.cpp.56C76A52212A25B6.idx  DatabaseManager.h.A9EA49FA291C75D6.idx  InputValidator.cpp.D1A14DD11108F207.idx  InputValidator.h.36AB60AE39A00B61.idx  Loan.h.51EE68A671797829.idx  LoanManager.cpp.A8A687519DEEC339.idx  LoanManager.h.3614AEB08AE2A21A.idx  Logger.cpp.E796AC18EA5DCDE0.idx  Logger.h.4B29F726A54C924C.idx  NotificationService.cpp.2F317828CD8BCBA8.idx  NotificationService.h.B5F9578018F9FB94.idx  RD.h.C5761BD11C2CAB55.idx  RDManager.cpp.668B7C08BA606730.idx  RDManager.h.62DFF0B767488FB9.idx  ReportGenerator.h.2A820C8F607A1F61.idx  Sha256.h.1606D801A37C96DB.idx  StandingInstruction.h.06A0549C7211BF44.idx  StandingInstructionManager.cpp.FE77B4626611BAB9.idx  (+9 more)
data/: accounts.txt  bank.db
data/transactions/: BNGL00000001.txt  BNGL00000002.txt
src/: AccountManager.cpp  AccountManager.h  BackgroundWorker.cpp  BackgroundWorker.h  BankAccount.cpp  BankAccount.h  BankExceptions.h  Config.h  DatabaseManager.cpp  DatabaseManager.h  FileManager.cpp  InputValidator.cpp  InputValidator.h  Loan.h  LoanFileManager.cpp  LoanFileManager.h  LoanManager.cpp  LoanManager.h  Logger.cpp  Logger.h  NotificationService.cpp  NotificationService.h  RD.h  RDManager.cpp  RDManager.h  ReportGenerator.h  Sha256.h  StandingInstruction.h  StandingInstructionManager.cpp  StandingInstructionManager.h  Utils.cpp  main  main.cpp
src/Headers/: BankAccount.h
src/data/: accounts.txt  bank.db
tests/: test_background.cpp  test_loan.cpp  test_rd.cpp  test_security.cpp
(+1 files in other folders)
